fixed product cards overlapping

--- a/src/ui/product-card.module.css
+++ b/src/ui/product-card.module.css
@@ -2,7 +2,7 @@
     width: 300px;
     border: 1px solid #d6d6d6;
     border-radius: 0px 0px 6px 6px;
-    margin: 0px 15px;
+    margin: 10px 15px;
     padding: 30px;
     position: relative;
     text-align: center;
@@ -25,7 +25,7 @@
     width: 300px;
     border: 1px solid #d6d6d6;
     border-radius: 0px 0px 6px 6px;
-    margin: 0px 15px;
+    margin: 10px 15px;
     padding: 30px;
     position: relative;
     text-align: center;
@@ -47,7 +47,7 @@
     width: 300px;
     border: 1px solid #d6d6d6;
     border-radius: 0px 0px 6px 6px;
-    margin: 0px 15px;
+    margin: 10px 15px;
     padding: 30px;
     position: relative;
     text-align: center;
